[metadata]
name = json-lineage
version = 0.1.0
description = Library to parse JSON files iteratively without loading the whole file into memory
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
license_file = "LICENSE"
author = "Salaah Amin"
url = https://github.com/Salaah01/json-lineage
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.packages.find]
exclude =
    tests*
